# Intelligent_Robotics-project

./: CMakeLists.txt  README.md
object_manipulation/: CMakeLists.txt  HW2 pipeline.txt  package.xml
object_manipulation/include/object_manipulation/: ArmHandler_lib.h  CollisionObjects_lib.h  GripperAttacher_lib.h  GripperManager_lib.h  MoveTiago_lib.h  TagLocalization_lib.h
object_manipulation/launch/: launchAll.launch
object_manipulation/src/: arm_handler.cpp  pandp_manager.cpp  tag_localization.cpp
object_manipulation/src/internal/: ArmHandler_lib.cpp  CollisionObjects_lib.cpp  GripperAttacher_lib.cpp  GripperManager_lib.cpp  MoveTiago_lib.cpp  TagLocalization_lib.cpp
object_manipulation/srv/: TagLocaliz.srv  arm_handler.srv
tiago_obstacle_finder/: CMakeLists.txt  package.xml
tiago_obstacle_finder/action/: FindObstacles.action
tiago_obstacle_finder/include/tiago_obstacle_finder/: ObjectDetection.h
tiago_obstacle_finder/src/: ObjectDetection.cpp  obs_finder_client.cpp  obs_finder_server.cpp
worlds/: ias_lab_room_full_tables.world
